Require passing tests for the CI to pass

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,3 +15,6 @@ Dependencies:
     'frameworks/kio': '@stable'
     'frameworks/kwidgetsaddons': '@stable'
     'frameworks/kxmlgui': '@stable'
+
+Options:
+    require-passing-tests-on: [ 'Linux', 'FreeBSD' ]
