--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['Linux/Qt6', 'FreeBSD/Qt6']
+- 'on': ['Linux', 'FreeBSD']
   'require':
     'frameworks/extra-cmake-modules': '@latest-kf6'
     'frameworks/kcrash': '@latest-kf6'
@@ -17,4 +17,4 @@ Dependencies:
     'frameworks/kxmlgui': '@latest-kf6'
 
 Options:
-    require-passing-tests-on: [ 'Linux/Qt6', 'FreeBSD/Qt6' ]
+    require-passing-tests-on: [ 'Linux', 'FreeBSD' ]
